/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.11.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.11.0'
    implementation 'org.apache.spark:spark-core_2.12:3.2.4'
    implementation 'org.apache.spark:spark-sql_2.12:3.2.4'
    testImplementation 'org.apache.spark:spark-sql_2.12:3.2.4'
    compileOnly 'org.projectlombok:lombok:1.18.34'
    annotationProcessor 'org.projectlombok:lombok:1.18.34'
}

group = 'ru.itmo.pddp.asashina'
version = '1.0-SNAPSHOT'
description = 'data-processing'
java.sourceCompatibility = JavaVersion.VERSION_11

test {
    useJUnitPlatform()

    jvmArgs = [
            "--add-opens=java.base/java.lang=ALL-UNNAMED",
            "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
            "--add-opens=java.base/java.io=ALL-UNNAMED",
            "--add-opens=java.base/java.net=ALL-UNNAMED",
            "--add-opens=java.base/java.nio=ALL-UNNAMED",
            "--add-opens=java.base/java.util=ALL-UNNAMED",
            "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
            "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
            "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
            "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
            "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED"
    ]
}

compileTestJava {
    options.compilerArgs.add('--add-exports=java.base/sun.nio.ch=ALL-UNNAMED')
}

compileJava {
    options.compilerArgs.add('--add-exports=java.base/sun.nio.ch=ALL-UNNAMED')
}

jar {
    manifest {
        attributes(
                'Main-Class': 'ru.itmo.pddp.asashina'
        )
    }
}
